--- a/mypage.html
+++ b/mypage.html
@@ -8,19 +8,22 @@
     <link href="css/mystyles.css" rel="stylesheet">
 </head>
 <body>
-    <a class="Home" href="index.html">Home</a>
+    <div class="Home"><a href="index.html">Home</a></div>
+    
     <div id="back2top" class="title">
         My webpage
     </div>
     <!-- List -->
     <div class="subtitle">Quick Facts about me:</div>
-    <div>
+    <div class="order-list">
         <ol>
             <li>I love food, these are my favorite:</li>
             <ul>
-                <li>Hamburgers</li>
-                <li>Pizza</li>
-                <li>Pasta</li>
+                <div class="list-items">
+                    <li>Hamburgers</li>
+                    <li>Pizza</li>
+                    <li>Pasta</li>
+                </div>
             </ul>
             <li>I am 21 years old</li>
             <li>I have a dog</li>
